img/1/nginx-tool-deployment3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-multitool-deployment
  labels:
    app: busybox-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox-multitool
  template:
    metadata:
      labels:
        app: busybox-multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        command: ['sh', '-c', 'while true; do cat /output/data.txt; sleep 5; done']
        volumeMounts:
        - name: my-volume
          mountPath: /output
      - name: busybox
        image: busybox
        command: ['sh', '-c', 'i=1; while true; do echo "Data Netology $i" >> /input/data.txt; i=$((i+1)); sleep 5; done']
        volumeMounts:
        - name: my-volume
          mountPath: /input
      volumes:
      - name: my-volume
        emptyDir: {}
