img/1/nginx-tool-deployment5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool-deployment
  labels:
    app: nginx-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html
        - name: multitool
          image: praqma/network-multitool
      volumes:
        - name: config-volume
          configMap:
            name: my-configmap2
