img/1/svc_1.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: nginx-multitool
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: other-port
      protocol: TCP
      port: 8080
      targetPort: 8080
